# substrate-project-template

./: .gitignore  README.md
.github/workflows/: check.yml  rust.yml  substrate.yml
js/: .env  index.js  package-lock.json  package.json  types.json
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/: types.json
pallets/template/: Cargo.toml
pallets/template/src/: default_weight.rs  lib.rs  mock.rs  payment.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
