[package]
authors = ['Mixbytes <https://github.com/mixbytes/substrate-project-template>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Apache-2.0'
name = 'pallet-template'
repository = 'https://github.com/mixbytes/substrate-project-template'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
pallet-timestamp = { default-features = false, version = '2.0.0' }
#pallet-balances = { default-features = false, version = '2.0.0' }
serde = { default-features = false, version = '1.0.116', optional=true }
pallet-transaction-payment = { default-features = false, version = '2.0.0', optional=true }

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
pallet-transaction-payment = { default-features = false, version = '2.0.0' }
pallet-balances = { default-features = false, version = '2.0.0' }

[features]
default = ['std','payment']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-timestamp/std',
    'pallet-balances/std',
    'pallet-transaction-payment/std',
    'serde/std'
]
payment = [
    'pallet-transaction-payment'
]
